--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body{
 img{
     
     
-    width: 50%;
-    border-radius: 50%;
+    width: 30%;
+    border-radius: 30%;
     align:"left";
 
 
@@ -32,7 +32,7 @@ img{
 }
 .right{
     float: right;
-    margin-top: 25%;
+    margin-top: 15%;
     margin-right: 25%;
     padding: 16px 35px;
     text-decoration: none;
@@ -127,4 +127,26 @@ img{
 .list-inline {
   display: inline;
   padding: 1rem;
+}
+/*project section in index page*/
+.section-dark {
+  color: #ddd;
+  text-align: center;
+
+}
+
+/* blog section in index page*/
+
+.section-blog{
+  color: #ddd;
+  text-align: center;
+
+}
+
+.link{
+ margin: 30px 30px;
+  padding: 10px 35px;
+    text-decoration: none;
+    border: rgb(255,181,0) 1px solid;
+    border-radius: 35px;
 }
